<resources>
    <string name="app_name">Cook book</string>
    <string name="counter_one">Счетчик 1</string>
    <string name="counter_two">Счетчик 2</string>
    <string name="counter_three">Счетчик 3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users_log">\Логин пользователя: \ </string>
    <string name="user_data">Данные пользователя:</string>
    <string name="get_last_user">Получить последнего пользователя</string>
    <string name="show_all_users">Отобразить всех полизователей</string>
    <string name="textView_default_bottom_string_for_item_holder">Нижняя строка карточки</string>
    <string name="ImageView_contentDescription_add_to_favorites">Иконка статуса нахождения в избранном / отслеживаемом</string>
    <string name="ImageView_contentDescription_error">Иконка сообщающая о налицчии ошибки</string>
    <string name="btn_image_selection_text">Выбрать изображение</string>
    <string name="btn_abort_converse_text">Прервать процесс конвертации</string>
    <string name="btn_go_to_image_converter_text">Конвертер изображений</string>
    <string name="error_message_not_uri">Ошибка: Uri = null (не передан)</string>
    <string name="repository_information">Информация об репозитории:</string>
    <string name="id">\ID: \</string>
    <string name="repos_information">\Имя репозитория: \</string>
    <string name="fork_count">\Количество форков: \</string>
    <string name="users_list">List all meal categories</string>
    <string name="repositories_list">Recipes</string>
    <string name="recipe_title">RECIPE</string>
    <string name="name_of_meal">Name of meal</string>
    <string name="area_meal">Area meal</string>
    <string name="ingredients">ingredients</string>
    <string name="instruction">instruction</string>
    <string name="play_movie">play movie</string>
    <string name="empty_link">EMPTY LINK</string>
    <string name="check_internet">Check Internet connection</string>

</resources>